--- a/style.css
+++ b/style.css
@@ -156,6 +156,10 @@ body {
     .main-container {
         margin-bottom: 4.25rem;
     }
+
+    .btn-container {
+        margin-bottom: 2rem;
+    }
 }
 
 @media (min-width:600px) {
