--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
     color: white;
     background: url(images/bg-mobile.svg), hsl(257, 40%, 49%);
     background-repeat: no-repeat;
+    background-size: contain;
     text-align: center;
 }
 
@@ -89,6 +90,8 @@ body {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     font-size: 0.75rem;
     transition: 0.2s;
+    display: block;
+
 }
 
 .container-info .btn-reg:hover {
@@ -162,19 +165,25 @@ body {
         margin-bottom: 2rem;
         text-align: center;
     }
+
+    .container-info .btn-reg {
+        margin: auto;
+        margin-bottom: 2rem;
+    }
 }
 
 @media (min-width:600px) {
 
     body {
         background: url(images/bg-desktop.svg), hsl(257, 40%, 49%);
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         height: 100vh;
     }
 
     .main-container {
-        margin-top: 1rem;
+        margin: 2rem;
+        margin-top: 0;
         display: flex;
         text-align: left;
         justify-content: center;
@@ -247,7 +256,7 @@ body {
 
     .btn-container {
         display: block;
-        margin-left: 15rem;
+        float: right;
     }
 
     .mobile {
@@ -260,5 +269,12 @@ body {
 
     .desktop>button {
         margin-inline: 0.4rem;
+    }
+}
+
+@media (min-width:1440px) {
+    .main-container {
+        margin:
+            4rem;
     }
 }
