--- a/style.css
+++ b/style.css
@@ -274,7 +274,6 @@ body {
 
 @media (min-width:1600px) {
     .main-container {
-        margin:
-            4rem;
+        margin: 4rem;
     }
 }
